--- a/src/assets/scss/02_molecule/_redesign-future.scss
+++ b/src/assets/scss/02_molecule/_redesign-future.scss
@@ -8,13 +8,20 @@
 
         h2 {
             color: get-color-primary("white");
-            @include font-size("medium-large");
-            font-size: 36px;
-            // @include line-height("medium-large");
-            line-height: 48px;
+            font-size:20px;
+            font-size:1.25rem;
+            line-height:32px;
+            line-height:2rem;
             font-weight: 200;
             :nth-child(1){
                 font-weight: 500;
+            }
+
+            @include breakpoints("tablet") {
+                //@include font-size("medium-large");
+                font-size: 36px;
+                // @include line-height("medium-large");
+                line-height: 48px;
             }
         }
     }
