--- a/src/assets/scss/03_organism/_work-featured.scss
+++ b/src/assets/scss/03_organism/_work-featured.scss
@@ -2,12 +2,14 @@
     &__container {
         padding-top: 3rem;
         padding-bottom: 3rem;
-        background-color: get-color-secondary("violet");
-        background-image: url("/img/home-feature-edio-triangle.png"), url("/img/home-feature-edio-dots.png"),
-            url("/img/home-feature-edio-swabs.png");
-        background-position: top left, top right, bottom right;
-        background-repeat: no-repeat;
         color: get-color-primary("white");
+        background-color: get-color-secondary("violet");
+        @include breakpoints("laptop") {
+            background-image: url("/img/home-feature-edio-triangle.png"), url("/img/home-feature-edio-dots.png"),
+                url("/img/home-feature-edio-swabs.png");
+            background-position: top left, top right, bottom right;
+            background-repeat: no-repeat;
+        }
 
         .featured-work-partner-name {
             color: get-color-neutral("lighter-gray");
@@ -77,7 +79,7 @@
 
         a {
             line-height: 27px;
-            @include font-size("small");
+            font-size: 20px; //@include font-size("small");
 
             color: get-color-primary("white");
             font-family: $font-primary;
