--- a/src/assets/scss/03_organism/_menu.scss
+++ b/src/assets/scss/03_organism/_menu.scss
@@ -125,6 +125,10 @@
                 transition-delay: 1s, 1s;
             }
 
+            &:nth-of-type(5) {
+                transition-delay: 1.25s, 1.25s;
+            }
+
             &:hover {
                 opacity: 0.6;
             }
