--- a/src/assets/scss/02_molecule/_learn-about-us.scss
+++ b/src/assets/scss/02_molecule/_learn-about-us.scss
@@ -8,7 +8,7 @@
         padding-bottom: 5rem;
 
         a {
-            font-family: $font-primary;
+            font-family: $font-secondary;
             font-size: 18px;
             letter-spacing: .2em;
             color: get-color-primary("after-hours");
@@ -25,13 +25,22 @@
         h2 {
             color: get-color-neutral("light-gray");
             margin-bottom: 2rem;
+            margin-top: 2rem;
             font-size:20px;
             font-size:1.25rem;
             line-height:32px;
             line-height:2rem;
             @include breakpoints("tablet") {
+                font-size: 28px;
+                line-height: 48px;
+                margin-top: 0;
+                margin-right: 60px;
+            }
+            @include breakpoints("sm-desktop") {
                 font-size: 36px;
-                line-height: 48px;                
+                line-height: 48px;
+                margin-top: 0;
+                margin-right: 60px;
             }
 
         }
@@ -46,11 +55,34 @@
             }
 
             img {
-                width:25%;
+                max-width: 200px;
+                // width:25%;
+                @include breakpoints("phone") {
+                    width: 315px;
+                    max-width: 315px;
+                }
                 @include breakpoints("tablet") {
-                    width: initial;
+                    width: 315px;
+                    max-width: 315px;
+                    //width: initial;
+                }
+
+                @include breakpoints("sm-desktop") {
+                    width: 415px;
+                    max-width: 415px;
                 }
             }
         }
+    }
+
+    &__content-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    &__image-container {
+        display: flex;
+        justify-content: center;
     }
 }
