AWE-177 link bottom border width sizing adjustment

--- a/src/assets/scss/03_organism/_from-our-blog.scss
+++ b/src/assets/scss/03_organism/_from-our-blog.scss
@@ -16,6 +16,7 @@
             border-color: get-color-primary("fresh");
             text-decoration: none;
             border-bottom-style: solid;
+            width: 175px;   // used to temporarily patch the bottom border length
         }
 
         .from-our-blog {
