--- a/src/assets/scss/02_molecule/_learn-about-us.scss
+++ b/src/assets/scss/02_molecule/_learn-about-us.scss
@@ -16,9 +16,11 @@
             border-color: get-color-primary("fresh");
             text-decoration: none;
             border-bottom-style: solid;
+            width: 160px;
             @include breakpoints("tablet") {
                 font-size: 20px; //@include font-size("small");
                 font-weight: 500;
+                width: 180px;
             }
         }
 
@@ -56,7 +58,6 @@
 
             img {
                 max-width: 200px;
-                // width:25%;
                 @include breakpoints("phone") {
                     width: 315px;
                     max-width: 315px;
@@ -64,7 +65,6 @@
                 @include breakpoints("tablet") {
                     width: 315px;
                     max-width: 315px;
-                    //width: initial;
                 }
 
                 @include breakpoints("sm-desktop") {
