add max height to fix img distortion

--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -331,4 +331,13 @@
             }
         }
     }
+
+    .large-image-container {
+        .o-rhythm__row {
+            max-height: 244px;
+            @include breakpoints("phone") {
+                max-height: none;
+            }
+        }
+    }
 }
