--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -335,7 +335,22 @@
     .large-image-container {
         .o-rhythm__row {
             max-height: 244px;
-            @include breakpoints("phone") {
+            @media (min-width: 400px) {
+                max-height: 319px;
+            }
+            @media (min-width: 500px) {
+                max-height: 422px;
+            }
+            @include breakpoints("sm-tablet"){
+                max-height: 500px;
+            }
+            @include breakpoints("tablet"){
+                max-height: 658px;
+            }
+            @include breakpoints("laptop"){
+                max-height: 799px;
+            }
+            @include breakpoints("sm-desktop") {
                 max-height: none;
             }
         }
