Feature/about page finishing touches (#52)
* Development (#39)

* update link to next case study on edio case study (#33)

Co-authored-by: Peter Stone <pstone@andculture.com>

* AWE-147 Overall: em dash consistency (CCA, H1, Pulse) (#34)

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* add / to links to avoid 301 redirects (#35)

Co-authored-by: Peter Stone <pstone@andculture.com>

* robots.txt and sitemap.xml added for production builds using the gatsby plugins. (#36)

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* add revised edio hero for edio feature block (#37)

Co-authored-by: Peter Stone <pstone@andculture.com>

* AWE-123 tighten up margins on contact form (#38)

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

Co-authored-by: Peter Stone <42245052+Peter-G-Stone@users.noreply.github.com>
Co-authored-by: Peter Stone <pstone@andculture.com>
Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* Create Department “test”

* fix about hero fonts, add about hero image and text, remove test department that I created with cms

* add about to menu, add its animation

* get about hero to break to one col at wider viewport

* Bugfix/distorted edio image (#49)

* add max height to fix img distortion

* swap out edio-diagram for new version

* add extreme media query customization - needs refactored

Co-authored-by: Peter Stone <pstone@andculture.com>

* font-size and margin changes for about page

Co-authored-by: Aaron <aw9994@cs.ship.edu>
Co-authored-by: Peter Stone <pstone@andculture.com>
Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>
Co-authored-by: Shane Shearer <shane.a.shearer@gmail.com>

--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -333,4 +333,28 @@
             }
         }
     }
+
+    .large-image-container {
+        .o-rhythm__row {
+            max-height: 244px;
+            @media (min-width: 400px) {
+                max-height: 319px;
+            }
+            @media (min-width: 500px) {
+                max-height: 422px;
+            }
+            @include breakpoints("sm-tablet"){
+                max-height: 500px;
+            }
+            @include breakpoints("tablet"){
+                max-height: 658px;
+            }
+            @include breakpoints("laptop"){
+                max-height: 799px;
+            }
+            @include breakpoints("sm-desktop") {
+                max-height: none;
+            }
+        }
+    }
 }
