--- a/src/assets/scss/05_page/_about.scss
+++ b/src/assets/scss/05_page/_about.scss
@@ -7,6 +7,13 @@
     padding-top: 50px;
   }
 
+  .hero-intro-text {
+    margin: 0 0 35px 0;
+    margin-right: 0 !important;
+    max-width: none;
+    line-height: 30px;
+  }
+
   @include breakpoints ("tablet"){
     .department-list {
       padding-bottom: 100px;
@@ -37,14 +44,32 @@
     display: flex;
   }
 
+  h1 {
+    @include font-size(48px);
+    @include line-height("larger");
+
+    @include breakpoints("laptop") {
+      line-height: 72px;
+      @include font-size(60px);
+    }
+  }
+
+  h2 {
+    @include font-size("medium-large");
+
+    @include breakpoints ("laptop") {
+          @include font-size(48px);
+    }
+  }
+
   #greeting {
     color: get-color("primary", "fresh");
-    margin-bottom: 40px;
-    @include font-size("medium-large");
+    margin-bottom: 20px;
+    @include font-size("medium");
     @include line-height(46px);
 
-    @include breakpoints("tablet") {
-        @include font-size("larger");
+    @include breakpoints("laptop") {
+        @include font-size("large");
         @include line-height("larger");
     }
   }
@@ -70,4 +95,35 @@
       }
     }
   }
+
+  .hero-image {
+    justify-content: center;
+    align-items: center;
+    display: none;
+
+    @include breakpoints("sm-desktop") {
+      display: flex;
+    }
+    img {
+      max-width: 75%;
+    }
+  }
+
+  .about-hero-text {
+    flex-basis: calc(100% - 16px);
+    max-width: calc(100% - 16px);
+
+    @include breakpoints("sm-desktop") {
+      flex-basis: calc(50% - 12px);
+      max-width: calc(50% - 12px);
+    }
+  }
+
+  .o-hero__titles {
+    margin-top: 60px;
+    @include breakpoints("phone"){
+      margin-top: 40px;
+    }
+  }
+
 }
